kubernetes/buildkit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: buildkitd
  namespace: buildkit
spec:
  selector:
    app: buildkitd
  ports:
    - name: grpc
      port: 1234
      targetPort: grpc
